--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "command-line-args": "^5.1.1",
     "htmlparser2": "^3.10.1",
     "node-fetch": "^2.6.0"
   }
